# MX_SRV

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
scripts/: init.sql
user_srv/: server.py
user_srv/handler/: user.py
user_srv/model/: models.py
user_srv/proto/: user.proto  user_pb2.py  user_pb2_grpc.py
user_srv/settings/: setting.py
user_srv/tests/: test_create_user.py  test_get_user_by_id.py  test_get_user_by_mobile.py  test_update_user.py  user.py
